Update dependencies and refactor CORS configuration; add AllowOriginFilter for enhanced CORS handling